One of the commits of all time
- Everything is now renamed!
- ...But localization is now completely broken for no apparent reason.

--- a/Delterra.csproj
+++ b/Delterra.csproj
@@ -16,6 +16,7 @@
 	  <Folder Include="Assets\AmbientSounds\" />
 	  <Folder Include="Assets\Music\" />
 	  <Folder Include="Assets\SoundEffects\" />
+	  <Folder Include="Localization\" />
 	</ItemGroup>
 
 	<!-- References -->
