README and icon fixed

--- a/Delterra.csproj
+++ b/Delterra.csproj
@@ -15,6 +15,7 @@
 	<ItemGroup>
 	  <Folder Include="Assets\AmbientSounds\" />
 	  <Folder Include="Assets\SoundEffects\" />
+	  <Folder Include="Content\Items\Placables\NewFolder\" />
 	</ItemGroup>
 
 	<!-- References -->
